--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,15 @@
 {
+  "extends": ["next/core-web-vitals", "eslint:recommended"],
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["react", "@typescript-eslint"],
+  "env": {
+    "browser": true,
+    "node": true,
+    "es2021": true
+  },
   "rules": {
-    "@typescript-eslint/no-unused-vars": "off",
-    "react/no-unescaped-entities": "off",
-    "@typescript-eslint/no-empty-object-type": "off"
+    "@typescript-eslint/no-unused-vars": "off",  // Disable unused-vars rule
+    "react/no-unescaped-entities": "off",       // Disable no-unescaped-entities rule
+    "@typescript-eslint/no-empty-interface": "off"  // Disable empty interface rule
   }
 }
