--- a/snaity/package.json
+++ b/snaity/package.json
@@ -16,6 +16,8 @@
   ],
   "dependencies": {
     "@sanity/vision": "^3.64.3",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanity": "^3.64.3",
